# cna-template

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  NEXT.md  README.md  missing.md  plan.md
.github/workflows/: ci.yml
android/: build.gradle  gradle.properties  local.properties.template
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: Content
android/app/src/main/java/org/openeggbert/cnatemplate/: HelloGameActivity.java
android/app/src/main/res/values/: styles.xml
cmake/toolchains/: mingw-w64.cmake
include/HelloGame/: HelloGame.hpp
src/HelloGame/: HelloGame.cpp  Program.cpp
